some issues solved

--- a/views/club.ejs
+++ b/views/club.ejs
@@ -86,7 +86,7 @@
             <%} else {%>
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
             <%}%>
-                <%= message%>
+                <%= locals.message%>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
