--- a/views/edit_events.ejs
+++ b/views/edit_events.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Add Event</title>
+    <title>Edit<%= event.name%> Event</title>
 
     <!-- Favicon-->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -44,7 +44,7 @@
     <p style="margin-left: 2.5em;padding: 0 7em 2em 0;border-width: 2px; "></p>
     <div class="container mt-5 pt-5">
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
-            style="font-family: 'Kaushan Script', cursive;">Add Event
+            style="font-family: 'Kaushan Script', cursive;">Edit<%= event.name%> Event
         </h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
