--- a/views/editstudent.ejs
+++ b/views/editstudent.ejs
@@ -118,7 +118,7 @@
 
         </form>
         <p style="margin-left: 2.5em;padding: 0 7em 2em 0;border-width: 2px;"></p>
-        <form action="<%= student._id %>/delete" method="POST">
+        <form action="delete" method="POST">
             <div class="form-group">
                 <div class="form-text text-muted">Delete all information from <strong>CLUBSIIITM</strong>.</div>
                 <button type="submit" class="btn btn-outline-danger">UN-REGISTER</button>
